Black, fixed build config and build version 0.0.1a0

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
-recursive-include birdshop657/static *
-recursive-include birdshop657/templates *
+include LICENSE.md
+include README.md
+recursive-include static/ *
+recursive-include templates/ *
