--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = birdshop657
-version = 0.0.1a0
+version = 0.1.0a
 description = A small Wagtail shop app with Stripe integration.
 long_description = file: README.md
 url = https://github.com/oscfr657/BirdShop657
